
2019-05-05  Simon Sobisch <simonsobisch@gnu.org>

	* autogen.sh: suppress most error messages (that can also occur if
	  execution rights are already available but we can't set them)
	* configure.ac: check for curses has_mouse

2019-04-14  Ron Norman <rjn@inglenet.com>

	* configure.ac [__xlc__]: suppress compiler warning about MAXMEM
	  optimization

2019-04-06  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am (noinst_SCRIPTS) add pre-inst-env
	* configure.ac (AC_CONFIG_FILES): add pre-inst-env (template file
	  build_aux/pre-inst-env.in) and split existing entries to initialize
	  scripts to be executable

2019-04-06  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am (noinst_SCRIPTS) add pre-inst-env
	* configure.ac (AC_CONFIG_FILES): add pre-inst-env (template file
	  build_aux/pre-inst-env.in) and split existing entries to initialize
	  scripts to be executable

2019-03-15  Simon Sobisch <simonsobisch@gnu.org>

	* autogen.sh: fixed to work correctly when called as "./autogen.sh"

2019-02-18  Simon Sobisch <simonsobisch@gnu.org>

	* autogen.sh: new, wrapper for build_aux/bootstrap
	* Makefile.am: cleanup distribution rules

2019-01-06  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: added action "comment" for PKG_CHECK_MODULES
	  cJSON for action-not-found as the empty (default) action is
	  to abort configure

2019-01-05  Edward Hart <edward.dan.hart@gmail.com>

	* configure.ac: added detection of cJSON.

2019-01-01  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: only check for finite function if isfinite is not found

2018-11-25  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: only warn once about missing headers needed for libxml2

2018-11-01  Simon Sobisch <simonsobisch@gnu.org>

	* libcob.h [COB_WITHOUT_DECIMAL]: allow include of libcob.h without
	  gmp header (for link-only; providing compatibility to GnuCOBOL 1.1)

2018-10-01  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: prefer user-specified localedir
