@@ -1,6 +1,6 @@
 NEWS - user visible changes				-*- outline -*-
 
- GnuCOBOL 3.1-rc1/final to be released (in 201904)
+ GnuCOBOL 3.1-rc1/final to be released (in May 2019)
 
 * New GnuCOBOL features
 
